--- a/Watermarking.ipynb
+++ b/Watermarking.ipynb
@@ -32,7 +32,7 @@
       },
       "source": [
         "### Colabolatory Setup\n",
-        "Mount the Google Drive that contains the source code and wartermarked image files.\n",
+        "Mount the Google Drive that contains the source code and watermarked image files.\n",
         "\n",
         "---\n",
         "\n"
@@ -45,16 +45,20 @@
       },
       "source": [
         "#### predefined parameters ###\n",
-        "# Google Drive directory that contains the source code and wartermarked image files.\n",
+        "# Google Drive directory that contains the source code and watermarked image files.\n",
         "wdir = '/MyDrive/automatic-watermark-detection'\n",
         "\n",
-        "# the directory that containes the wartermarked images.\n",
+        "# the directory that containes the watermarked images.\n",
         "# please speficy the relative path from 'wdir'\n",
-        "wartermkarked = 'wartermarked_images'\n",
+        "watermkarked = 'watermarked_images'\n",
         "\n",
         "# the image size (pixels) to be used during processing.\n",
         "width = 500\n",
-        "height = 500"
+        "height = 500\n",
+        "\n",
+        "# IMPORTANT PARAM!!! \n",
+        "# Please change the value to estimate wartermark accurately\n",
+        "watermark_thresh = 0.6"
       ],
       "execution_count": 28,
       "outputs": []
@@ -97,7 +101,7 @@
       },
       "source": [
         "# change working directory\n",
-        "# please specify your Google Drive directory that contains the target source code and wartermarked image files.\n",
+        "# please specify your Google Drive directory that contains the target source code and watermarked image files.\n",
         "%cd $wdir\n",
         "%pwd\n",
         "!ls"
@@ -111,9 +115,9 @@
             "array.npz\t\t\t\t Resized\n",
             "closed-form-matting\t\t\t resize.py\n",
             "coco_dataset\t\t\t\t src\n",
-            "final\t\t\t\t\t wartermarked_images\n",
-            "main_cocoset.py\t\t\t\t wartermarked_images_removed\n",
-            "main.py\t\t\t\t\t wartermarked_images_resized\n",
+            "final\t\t\t\t\t watermarked_images\n",
+            "main_cocoset.py\t\t\t\t watermarked_images_removed\n",
+            "main.py\t\t\t\t\t watermarked_images_resized\n",
             "Matting-Levin-Lischinski-Weiss-PAMI.pdf  Watermarking.ipynb\n",
             "README.md\t\t\t\t watermark.png\n",
             "references.txt\n"
@@ -128,7 +132,7 @@
         "id": "f28A3JTGnX3k"
       },
       "source": [
-        "Resize the target wartermarked images."
+        "Resize the target watermarked images."
       ]
     },
     {
@@ -142,15 +146,15 @@
       },
       "source": [
         "import os, cv2, warnings\n",
-        "forldername = os.path.join(wdir, wartermkarked)\n",
-        "resizeddir = os.path.join(wdir, wartermkarked +'_resized')\n",
-        "resultdir = os.path.join(wdir, wartermkarked +'_removed')\n",
+        "forldername = os.path.join(wdir, watermkarked)\n",
+        "forldername = os.path.join(wdir, watermkarked +'_resized')\n",
+        "resultdir = os.path.join(wdir, watermkarked +'_removed')\n",
         "\n",
         "if not os.path.exists(forldername):\n",
         "   warnings.warn(\"{} does not exist.\".format(forldername), UserWarning)\n",
         "\n",
-        "if not os.path.exists(resizeddir):\n",
-        "   os.mkdir(resizeddir)\n",
+        "if not os.path.exists(forldername):\n",
+        "   os.mkdir(forldername)\n",
         "\n",
         "if not os.path.exists(resultdir):\n",
         "   os.mkdir(resultdir)\n",
@@ -167,7 +171,7 @@
         "          print('original shape: {}'.format(img.shape))\n",
         "          img = cv2.resize(img,(width, height))\n",
         "          print('resized shape:  {}'.format(img.shape))\n",
-        "          cv2.imwrite(os.path.join(resizeddir, file), img)\n",
+        "          cv2.imwrite(os.path.join(forldername, file), img)\n",
         "        else:\n",
         "            print(\"%s not found.\" % (file))"
       ],
@@ -226,10 +230,10 @@
         "%matplotlib inline\n",
         "from src import *\n",
         "\n",
-        "gx, gy, gxlist, gylist = estimate_watermark(resizeddir)\n",
+        "gx, gy, gxlist, gylist = estimate_watermark(forldername)\n",
         "\n",
         "est = poisson_reconstruct(gx, gy)\n",
-        "cropped_gx, cropped_gy = crop_watermark(gx, gy)\n",
+        "cropped_gx, cropped_gy = crop_watermark(gx, gy, watermark_thresh)\n",
         "est2 = poisson_reconstruct(cropped_gx, cropped_gy)\n",
         "\n",
         "# random photo\n",
@@ -263,6 +267,13 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -394,7 +405,7 @@
         "index = 0\n",
         "\n",
         "# Iterate over all images\n",
-        "for r, dirs, files in os.walk(resizeddir):\n",
+        "for r, dirs, files in os.walk(forldername):\n",
         "    for file in files:\n",
         "        _img = cv2.imread(os.sep.join([r, file])).astype(float)\n",
         "        if _img is not None:\n",
